# Canon  - A Societal Kernel
# Copyright (C) 2026  Adam Hall
# This program comes with ABSOLUTELY NO WARRANTY.
# This is free software, and you are welcome to redistribute it
# under certain conditions. See: https://github.com/hatter6822/Orbcrypt/blob/main/LICENSE

# `canon-host` — RH-C skeleton.  The implementing work unit
# (RH-C.{1..5}) lands the TCP / Unix-socket service that accepts
# CBE-framed `SignedAction` requests and forwards them to the Lean
# `canon` executable.  See `docs/planning/rust_host_runtime_plan.md`
# §RH-C and `docs/abi.md` §10 (the placeholder line at 724 is closed
# by RH-C.5).

[package]
name = "canon-host"
description = "Canon host network adaptor (RH-C skeleton)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[[bin]]
name = "canon-host"
path = "src/main.rs"

[dependencies]
canon-cli-common = { workspace = true }

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[lints.rust]
missing_docs = "warn"
unreachable_pub = "warn"
unsafe_code = "forbid"
