# Knomosis  - A Societal Kernel
# Copyright (C) 2026  Adam Hall
# This program comes with ABSOLUTELY NO WARRANTY.
# This is free software, and you are welcome to redistribute it
# under certain conditions. See: https://github.com/hatter6822/Knomosis/blob/main/LICENSE

# `knomosis-cross-stack` — cross-stack equivalence fixture loader.
#
# RH-H step 4: "Implement `runtime/tests/cross-stack/` fixture loader.
# Each fixture is a CBE-encoded test vector (input bytes plus expected
# Lean output bytes).  The loader is a thin Rust helper that other
# crates import as a dev-dependency."
#
# The loader's contract is documented in src/lib.rs; in short, every
# downstream crate with a cross-stack contract (RH-A.1 ECDSA, RH-A.2
# keccak256, RH-B ingest, RH-C host, RH-G observer) dev-deps on this
# crate to read the canonical Lean-generated reference vectors and
# compare its own output byte-for-byte.

[package]
name = "knomosis-cross-stack"
description = "Cross-stack equivalence fixture loader for the Knomosis Rust host workspace."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
thiserror = { workspace = true }

[dev-dependencies]
# Pinned at `~3.14`: newer tempfile (≥ 3.15-ish) transitively pulls
# in `getrandom v0.4`, which requires `edition2024` (Rust 1.85+).
# Workspace MSRV is 1.83 per `rust-toolchain.toml`; bumping
# tempfile must be coordinated with the toolchain bump in the same
# PR.  The pin `~3.14` allows patch upgrades within 3.14.x but
# refuses 3.15.0 and beyond.
tempfile = "~3.14"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"

[lints.rust]
missing_docs = "warn"
unreachable_pub = "warn"
unsafe_code = "forbid"
