# Knomosis  - A Societal Kernel
# Copyright (C) 2026  Adam Hall
# This program comes with ABSOLUTELY NO WARRANTY.
# This is free software, and you are welcome to redistribute it
# under certain conditions. See: https://github.com/hatter6822/Knomosis/blob/main/LICENSE

# `knomosis-indexer` — RH-E.1.  Long-running daemon that consumes
# events from a running `knomosis-event-subscribe` (RH-D) and maintains
# a per-(actor, resource) balance view in a `knomosis-storage`
# (RH-E.0) database.  See `docs/planning/rust_host_runtime_plan.md`
# §RH-E.1 for the engineering plan.
#
# Build artefacts:
#   * `rlib` (library) — exports the event decoder, balance store,
#     cursor, and indexer orchestration types.  Consumed by the
#     binary and integration tests.
#   * Binary (`knomosis-indexer`) — long-running daemon entry point.
#     Parses CLI flags, opens the storage, connects to
#     `knomosis-event-subscribe`, and runs the consume loop until
#     the stop flag flips.
#
# RH-E.1 decomposes into:
#   1. Library skeleton + event-payload decoder.
#   2. Balance view (storage layout) + idempotent cursor.
#   3. Subscribe-client (reads knomosis-event-subscribe wire frames).
#   4. Indexer orchestrator: dispatch events to the balance view.
#   5. CLI: `daemon` and `query` subcommands.

[package]
name = "knomosis-indexer"
description = "Knomosis SQLite event indexer (RH-E.1)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "knomosis-indexer"
path = "src/main.rs"

[dependencies]
knomosis-cli-common = { workspace = true }
knomosis-storage = { path = "../knomosis-storage" }
# `thiserror` derives our typed errors with `Display` /
# `std::error::Error` impls and `#[from]` conversions.  Same
# discipline as knomosis-host and knomosis-l1-ingest.
thiserror = { workspace = true }
# `tracing` is the structured-logging API.
tracing = { workspace = true }
# `tracing-subscriber` initialises the logging pipeline via
# `knomosis-cli-common::logging::init`.
tracing-subscriber = { workspace = true }

[dev-dependencies]
# `proptest` powers the random-balance-op property tests.
proptest = { workspace = true }
# `tempfile` provides isolated tempdirs for per-test database files.
tempfile = { workspace = true }
# `serde` / `serde_json` / `hex` are dev-only: they parse the
# Lean-generated `event_subscribe_cbe.json` cross-stack fixture so
# `tests/cross_stack_lean_event.rs` can prove this crate's
# `decode_event` / `encode_event` round-trips REAL Lean `Event.encode`
# bytes byte-for-byte for tags 0..15 (GP.6.3).
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
doc_markdown = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
needless_pass_by_value = "allow"
unreadable_literal = "allow"
format_in_format_args = "allow"
manual_let_else = "allow"
single_match_else = "allow"
option_if_let_else = "allow"
redundant_else = "allow"
redundant_closure_for_method_calls = "allow"
default_trait_access = "allow"
useless_format = "allow"
match_wildcard_for_single_variants = "allow"
large_enum_variant = "allow"
manual_find = "allow"
if_then_some_else_none = "allow"
unnested_or_patterns = "allow"
from_iter_instead_of_collect = "allow"
iter_without_into_iter = "allow"
for_kv_map = "allow"
needless_continue = "allow"
too_many_lines = "allow"
similar_names = "allow"

[lints.rust]
missing_docs = "warn"
unreachable_pub = "warn"
# `forbid` is appropriate here: the indexer is a pure-Rust
# orchestrator with no FFI surface.
unsafe_code = "forbid"
