# Knomosis  - A Societal Kernel
# Copyright (C) 2026  Adam Hall
# This program comes with ABSOLUTELY NO WARRANTY.
# This is free software, and you are welcome to redistribute it
# under certain conditions. See: https://github.com/hatter6822/Orbcrypt/blob/main/LICENSE

# `knomosis-verify-secp256k1` — RH-A.1.  Materialises the ECDSA
# secp256k1 verification adaptor for Lean's `Authority.Crypto.Verify`
# opaque, exposed under the C ABI symbol `knomosis_verify_ecdsa`.  See
# `docs/planning/rust_host_runtime_plan.md` §RH-A.1 for the
# decomposition and `src/verify.rs` for the cryptographic core.
#
# Build artefacts:
#   * `rlib`     — consumed by other Rust crates (tests, the
#                  fixture-generator binary, future Rust callers).
#   * `staticlib` — used for static-link integration tests.
#   * `cdylib`   — the production artefact a Lean deployment links
#                  against to wire `knomosis_verify_ecdsa` into the
#                  `Verify` opaque via a deployment-specific
#                  `@[extern]` declaration.
#
# The cdylib's C ABI surface (`knomosis_verify_ecdsa`) is provided by a
# small C shim (`c/lean_shim.c`) compiled by `build.rs`.  The shim
# is only built when `lean.h` is locatable on the build host; CI
# environments without Lean installed produce the rlib + staticlib
# only.  See `build.rs` for the discovery logic.

[package]
name = "knomosis-verify-secp256k1"
description = "ECDSA secp256k1 verification adaptor for the Knomosis Lean kernel (RH-A.1)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
build = "build.rs"

[lib]
path = "src/lib.rs"
# `cdylib` produces the production shared library a Lean binary
# links against.  `staticlib` is for integration tests that prefer
# static linking.  `rlib` keeps the crate consumable by Rust tests
# without forcing a re-link.
crate-type = ["cdylib", "staticlib", "rlib"]

# RH-A.1.d fixture-corpus generator lives under `examples/` so it
# can pick up the dev-only `knomosis-cross-stack` and the signing
# features of `k256`.  Invoke via:
#   cargo run --example gen_ecdsa_fixtures -- [output-path]
# Re-generating the corpus is a deliberate developer action; the
# committed `.cxsf` file is the canonical source for tests.
[[example]]
name = "gen_ecdsa_fixtures"
path = "examples/gen_ecdsa_fixtures.rs"

[dependencies]
k256 = { workspace = true }
subtle = { workspace = true }

[dev-dependencies]
knomosis-cross-stack = { workspace = true }
# `k256` with `std` adds signing helpers (`SigningKey::sign_prehash`)
# the fixture generator and known-vector tests need.  Production
# code paths do not depend on these; the cdylib's compile path
# uses the workspace-default `default-features = false` k256
# (verify-only, no_std).
k256 = { workspace = true, features = ["ecdsa", "arithmetic", "std"] }
hex = { workspace = true }
proptest = { workspace = true }

[build-dependencies]
# `cc` compiles the C shim that bridges Lean's `lean_object *`
# argument convention to the Rust verification core's
# byte-slice-based signature.  Build-only dependency; the
# production cdylib contains the compiled shim object but does
# not link `cc` itself.
cc = { workspace = true }

# `c/lean_shim.c` is gated behind a Cargo feature (`lean-ffi`) that
# the build.rs enables when `lean.h` is locatable.  Consumers who
# want the cdylib symbol guaranteed-present pass `--features
# lean-ffi`; the default build mode auto-detects.
[features]
default = []
# Forces the Lean FFI shim build.  Fails the build if `lean.h` is
# not locatable; useful for production builds where the absence
# of the symbol is a hard error rather than a soft skip.
lean-ffi = []

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# `missing_errors_doc` / `missing_panics_doc` are redundant given
# the rustc `missing_docs` lint, which fires on every public item.
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# Allow `module_name_repetitions` (e.g. `verify_ecdsa` inside the
# `knomosis_verify_secp256k1` crate) — the workspace convention.
module_name_repetitions = "allow"

[lints.rust]
missing_docs = "warn"
unreachable_pub = "warn"
# `deny` (rather than `forbid`) so the tightly-scoped `unsafe`
# annotations the FFI shim layer needs can opt in via
# `#[allow(unsafe_code)]`.  At the RH-A.1 landing every `unsafe`
# in this crate lives in `src/verify.rs`:
#   * the `extern "C"` block declaring the C shim wrappers
#     (cfg-gated on `knomosis_lean_ffi`),
#   * the three Rust C ABI entry points (`knomosis_verify_ecdsa_raw`,
#     `knomosis_verify_ecdsa`),
#   * the `make_slice` slice-construction helper.
# Each carries a documented `# Safety` contract.
unsafe_code = "deny"
